<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_details"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/cancel"
            android:textColor="@color/button_text_Color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/personal_information"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@color/button_text_Color"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/et_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:autofillHints="name"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@color/button_text_Color"
        android:textSize="16sp" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Gray"
            android:hint="@string/e_mail"
            android:padding="16dp"
            android:textColorHint="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/delivery_address"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:autofillHints="emailAddress"
        android:hint="@string/street"
        android:inputType="textAutoComplete"
        android:maxWidth="150dp"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="@color/button_text_Color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:autofillHints="name"
        android:hint="@string/city"
        android:inputType="textAutoComplete"
        android:maxWidth="110dp"
        android:padding="16dp"
        android:singleLine="true"
        android:textSize="16sp"
        android:textColor="@color/button_text_Color"/>

    <EditText
        android:id="@+id/et_postalCode"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:autofillHints="postalCode"
        android:hint="@string/postal_code"
        android:inputType="number"
        android:maxWidth="110dp"
        android:padding="16dp"
        android:singleLine="true"
        android:textColor="@color/button_text_Color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/payment_methode"
        android:textSize="14sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/ll_paymentMethode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/backgroundColor"
            android:text="    PayPal" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/backgroundColor"
            android:text="      PDF" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/button_text_Color"
        android:text="@string/order"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="12dp"
        app:cornerRadius="12dp" />

</LinearLayout>